Added product inventory API
