# OpenAPISpecification.yaml
@@ -576,6 +576,140 @@ paths:
           description: Unauthorized
         '403':
           description: Forbidden
+  '/api/v1/products/{product-id}/product-inventory':
+    get:
+      tags:
+        - product-controller
+      summary: Get a product inventory for a product with id
+      operationId: getProductInventoryForProductIdUsingGET
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: product-id
+          in: path
+          description: product-id
+          required: true
+          type: integer
+          format: int32
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/ProductInventory'
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+    post:
+      tags:
+        - product-controller
+      summary: Create a list of Product Images for a product with id
+      operationId: createProductInventoryForProductIdUsingPOST
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: product-id
+          in: path
+          description: product-id
+          required: true
+          type: integer
+          format: int32
+        - in: body
+          name: productInventory
+          description: productInventory
+          required: true
+          schema:
+            $ref: '#/definitions/ProductInventory'
+      responses:
+        '201':
+          description: Created
+          schema:
+            $ref: '#/definitions/ProductInventory'
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+  '/api/v1/products/{product-id}/product-inventory{product-inventory-id}':
+    put:
+      tags:
+        - product-controller
+      summary: Update a product inventory product for a product with id
+      operationId: updateProductInventoryForProductIdUsingPUT
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: product-id
+          in: path
+          description: product-id
+          required: true
+          type: integer
+          format: int32
+        - name: product-inventory-id
+          in: path
+          description: product-inventory-id
+          required: true
+          type: integer
+          format: int32
+        - in: body
+          name: productInventory
+          description: productInventory
+          required: true
+          schema:
+            $ref: '#/definitions/ProductInventory'
+      responses:
+        '200':
+          description: OK
+          schema:
+            $ref: '#/definitions/ProductInventory'
+        '201':
+          description: Created
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
+        '404':
+          description: Not Found
+    delete:
+      tags:
+        - product-controller
+      summary: Delete a product inventory for a product id
+      operationId: deleteProductInventoryByIdNProductIdUsingDELETE
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: product-id
+          in: path
+          description: product-id
+          required: true
+          type: integer
+          format: int32
+        - name: product-inventory-id
+          in: path
+          description: product-inventory-id
+          required: true
+          type: integer
+          format: int32
+      responses:
+        '204':
+          description: No Content
+          schema:
+            $ref: '#/definitions/User'
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden
   /api/v1/tax-detail:
     get:
       tags:
@@ -1406,6 +1540,42 @@ definitions:
       productId:
         type: integer
         format: int32
+  ProductInventory:
+    type: object
+    properties:
+      availableCount:
+        type: integer
+        format: int32
+      createdBy:
+        type: integer
+        format: int32
+      createdDate:
+        type: string
+        format: date-time
+      deleted:
+        type: boolean
+      id:
+        type: integer
+        format: int32
+      lastModifiedBy:
+        type: integer
+        format: int32
+      lastModifiedDate:
+        type: string
+        format: date-time
+      productId:
+        type: integer
+        format: int32
+      soldCount:
+        type: integer
+        format: int32
+      status:
+        type: string
+        enum:
+          - ACTIVE
+          - OUT_OF_STOCK
+          - ARRAIVING_SOON
+          - PRE_ORDER
   ProductSearchRequest:
     type: object
     properties:
