# src/main/java/org/mihy/gowma/model/ProductInventory.java
@@ -6,23 +6,24 @@ package org.mihy.gowma.model;
 
 public class ProductInventory extends BaseModel {
 
-    private int availableCount;
-    private int soldCount;
+    private Integer availableCount;
+    private Integer soldCount;
+    private Integer productId;
     private InventoryStatus status;
 
-    public int getAvailableCount() {
+    public Integer getAvailableCount() {
         return availableCount;
     }
 
-    public void setAvailableCount(int availableCount) {
+    public void setAvailableCount(Integer availableCount) {
         this.availableCount = availableCount;
     }
 
-    public int getSoldCount() {
+    public Integer getSoldCount() {
         return soldCount;
     }
 
-    public void setSoldCount(int soldCount) {
+    public void setSoldCount(Integer soldCount) {
         this.soldCount = soldCount;
     }
 
@@ -32,6 +33,14 @@ public class ProductInventory extends BaseModel {
 
     public void setStatus(InventoryStatus status) {
         this.status = status;
+    }
+
+    public Integer getProductId() {
+        return productId;
+    }
+
+    public void setProductId(Integer productId) {
+        this.productId = productId;
     }
 
     public enum InventoryStatus {
